--- a/index.html
+++ b/index.html
@@ -6,34 +6,85 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0,
     maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
     <div class="padre">
         <header class="header">
-            <div class="menu">
-                <div class="logo"></div>
-                <div class="nav"></div>
-                <div class="social"></div>
+            <div class="menu margen-interno">
+                <div class="logo">
+                    <a href="index.html">LogoCorporativo</a>
+                </div>
+                <div class="nav">
+                    <a href="#"><i class="fa fa-home"></i><span class="off">Inicio</span></a>
+                    <a href="#"><i class="fa fa-user"></i><span class="off">Nosotros</span></a>
+                    <a href="#"><i class="fa fa-comments"></i><span class="off">Servicios</span></a>
+                    <a href="#"><i class="fa fa-file-text"></i><span class="off">Noticias</span></a>
+                    <a href="#"><i class="fa fa-envelope"></i><span class="off">Contacto</span></a>
+                </div>
+                <div class="social">
+                    <div><a href="#"><i class="fa-brands fa-square-facebook" aria-hidden="true"></i></a></div>
+                    <div><a href="#"><i class="fa-brands fa-square-twitter" aria-hidden="true"></i></a></div>
+                </div>
             </div>
-            <div class="texto-principal">
-                <h1></h1>
+            <div class="texto-principal margen-interno">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere impedit repellendus ab dolorem magnam sed, aspernatur consequuntur neque mollitia. Aperiam cum distinctio, aspernatur reiciendis rem molestiae quia consequuntur. A cumque voluptas delectus facere distinctio quis beatae voluptatibus molestias consequatur ullam pariatur natus porro dolorem nesciunt reprehenderit neque iusto, saepe fuga.</h1>
             </div>
         </header>
-        <section class="section">
+        <section class="section margen-interno">
             <div class="articulos">
-                <article class="article"></article>
-                <article class="article"></article>
-                <article class="article"></article>
-                <article class="article"></article>
-                <nav class="navegacion"></nav>
+                <article class="article">
+                    <img src="img/5.png" alt="">
+                    <h3>29 de diciembre</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur necessitatibus, sed voluptatum exercitationem, odit aliquam, sapiente quisquam blanditiis sit reiciendis ipsa dolores nobis voluptatem perferendis quis ut amet dolore aliquid.</p>
+                    <a href="#">Leer mas...</a>
+                </article>
+                <article class="article">
+                    <img src="img/5.png" alt="">
+                    <h3>29 de diciembre</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur necessitatibus, sed voluptatum exercitationem, odit aliquam, sapiente quisquam blanditiis sit reiciendis ipsa dolores nobis voluptatem perferendis quis ut amet dolore aliquid.</p>
+                    <a href="#">Leer mas...</a>
+                </article>
+                <article class="article">
+                    <img src="img/5.png" alt="">
+                    <h3>29 de diciembre</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur necessitatibus, sed voluptatum exercitationem, odit aliquam, sapiente quisquam blanditiis sit reiciendis ipsa dolores nobis voluptatem perferendis quis ut amet dolore aliquid.</p>
+                    <a href="#">Leer mas...</a>
+                </article>
+                <article class="article">
+                    <img src="img/5.png" alt="">
+                    <h3>29 de diciembre</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur necessitatibus, sed voluptatum exercitationem, odit aliquam, sapiente quisquam blanditiis sit reiciendis ipsa dolores nobis voluptatem perferendis quis ut amet dolore aliquid.</p>
+                    <a href="#">Leer mas...</a>
+                </article>
+                <nav class="navegacion">
+                    <a href="#">Inicio</a>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">Final</a>
+                </nav>
             </div>
             <aside class="aside">
-                <div class="publicidad"></div>
-                <div class="publicidad"></div>
+                <div class="publicidad">
+                    <h4>Aside</h4>
+                    <img src="img/3.jpg" alt="">
+                </div>
+                <div class="publicidad">
+                    <h4>Aside</h4>
+                    <img src="img/3.jpg" alt="">
+                </div>
             </aside>
         </section>
-        <footer class="footer">
-            <nav class="pie"></nav>
+        <footer class="footer margen-interno">
+            <nav class="pie">
+                <a href="#">Juan Diego</a>
+            </nav>
         </footer>
     </div>
 </body>
